# Nmap Changelog ($Id$); -*-text-*-

o The NSE datafiles library now has generic file parsing routines, and
  the parsing of the standard nmap data files (e.g. nmap-services,
  nmap-protocols, etc.) now uses those generic routines.  NSE scripts
  and libraries may find them useful for dealing with their own data
  files, such as password lists. [Jah]

o Fixed a Makefile problem (race condition) which could lead to build
  failures when launching make in parallel mode (e.g. -j4). [Michal
  Januszewski]

o Added new addrow() function to NSE tab library.  It allows
  developers to add a whole row at once rather than doing a separate
  add() call for each column in a row. [Sven Klemm]

o The NSE http library now supports chunked encoding. [Sven Klemm]

o Fix a number of NSE scripts which used print_debug()
  incorrectly. See
  http://seclists.org/nmap-dev/2008/q3/0470.html. [Sven Klemm].

o Improve the nebtios-smb-os-discovery NSE script to improve target
  port selection and to also decode the system's timestamp from an SMB
  response. [Ron at SkullSecurity]

o Merged in my nmap-exp/jurand/ branch that involves the Context
  Sensitive help system for the Profile Editor. The purpose of the
  Profile Editor is to allow you to assemble an nmap command to run
  in the Zenmap program by using graphical selection of text and
  checkbox input. The new help system allows you to mouse over options
  used in the Profile Editor and to display a bit of an overview about
  what it is used for and what proper input for that option is in the
  help textbox. [Jurand Nogiec]
  
o Compiled the Context Sensitive Help texts along with David Fifield
  in the profile_editor.xml file. [Jurand Nogiec]

o Rewrote the Icons.py get_os to use the osclass versus doing
  pattern-matching on os_match. Also, added get_best_osclass to match
  get_best_osmatch. [Jurand Nogiec]
  
o Fixed the bug where Ports/Hosts Version tabs are not populated with